--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,7 @@ Imports:
     purrr (>= 0.2.4),
     stringr (>= 1.2.0),
     tibble (>= 1.3.4),
-    lubridate (>= 1.7.1)
+    lubridate (>= 1.7.1),
+    rlang,
+    tidyselect
 RoxygenNote: 6.0.1
