Document pin_century()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(is_probably_pin,character)
 S3method(is_probably_pin,default)
 S3method(is_probably_pin,factor)
 export(is_probably_pin)
+export(pin_century)
 export(pin_dob)
 export(pin_extract)
 export(pin_sex)
