Implement is_valid_pin()
To check if values in a vector are valid PINs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,13 @@
 S3method(is_probably_pin,character)
 S3method(is_probably_pin,default)
 S3method(is_probably_pin,factor)
+S3method(is_valid_pin,character)
+S3method(is_valid_pin,default)
+S3method(is_valid_pin,factor)
 export(is_probably_pin)
+export(is_valid_pin)
 export(pin_century)
+export(pin_checksum)
 export(pin_dob)
 export(pin_extract)
 export(pin_sex)
