--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(pin_century)
 export(pin_checksum)
 export(pin_dob)
 export(pin_extract)
+export(pin_ordinal)
 export(pin_rescue)
 export(pin_sex)
 export(pseudonymize)
